Style fixes