@@ -59,7 +59,6 @@ import java.util.concurrent.ConcurrentHashMap;
 import java.util.concurrent.ConcurrentMap;
 import java.util.function.Supplier;
 
-import com.oracle.svm.core.jdk.Package_jdk_internal_reflect;
 import org.graalvm.compiler.core.common.NumUtil;
 import org.graalvm.nativeimage.StackValue;
 import org.graalvm.nativeimage.UnmanagedMemory;
@@ -78,6 +77,7 @@ import com.oracle.svm.agent.stackaccess.InterceptedState;
 import com.oracle.svm.agent.tracing.core.Tracer;
 import com.oracle.svm.configure.trace.AccessAdvisor;
 import com.oracle.svm.core.c.function.CEntryPointOptions;
+import com.oracle.svm.core.jdk.Package_jdk_internal_reflect;
 import com.oracle.svm.core.util.VMError;
 import com.oracle.svm.jni.JNIObjectHandles;
 import com.oracle.svm.jni.nativeapi.JNIEnvironment;
@@ -946,12 +946,11 @@ final class BreakpointInterceptor {
 
     /**
      * In rare occasions, the application can demand custom target constructor for serialization,
-     * using
-     * {@link sun.reflect.ReflectionFactory#newConstructorForSerialization(java.lang.Class, java.lang.reflect.Constructor)}
-     * on JDK8 or
-     * {@link jdk.internal.reflect.ReflectionFactory#newConstructorForSerialization(java.lang.Class, java.lang.reflect.Constructor)}
-     * on JDK11. We need to catch constructor class and create entry for that pair (serialization
-     * class, custom class constructor) in serialization configuration.
+     * using sun.reflect.ReflectionFactory#newConstructorForSerialization(java.lang.Class,
+     * java.lang.reflect.Constructor) on JDK8 or
+     * jdk.internal.reflect.ReflectionFactory#newConstructorForSerialization(java.lang.Class,
+     * java.lang.reflect.Constructor) on JDK11. We need to catch constructor class and create entry
+     * for that pair (serialization class, custom class constructor) in serialization configuration.
      */
     private static boolean customTargetConstructorSerialization(JNIEnvironment jni, @SuppressWarnings("unused") Breakpoint bp, InterceptedState state) {
         JNIObjectHandle serializeTargetClass = getObjectArgument(1);
